# faithfulness-judge

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  SCOPE.md  pyproject.toml
.github/: dependabot.yml
data/: README.md  answers.yaml  answers_assertive.yaml  answers_helpful.yaml  claims.yaml  judgments_opus.yaml  judgments_sonnet.yaml  questions.yaml
decisions/: 001-both-tiers-substantial.md
docs/: labeling-guide.md
evals/: results.md
scripts/: inspect_questions.py
src/: build_gold_set.py  dataset.py  decompose.py  generate_answers.py  judge.py  labels.py  score.py
tests/: test_build_gold_set.py  test_dataset.py  test_decompose.py  test_generate_answers.py  test_judge_score.py  test_labels.py
